# gittd

./: Cargo.toml  README.md
src/: app.rs  branches.rs  cli.rs  events.rs  git_repo.rs  main.rs  subapps.rs  ui.rs
src/commands/: branch.rs
src/subapps/: branch.rs
