[package]
name = "gittd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.13", features = ["derive"] }
crossterm = "0.27.0"
git2 = "0.18.1"
ratatui = "0.25.0"
